Ensure that we can repeatedly set an expando on a plugin object

Just checking whether the holder has the property in the setter
interceptor doesn't work, as this will invoke the get interceptor.

BUG=691142
R=haraken@chromium.org

Review-Url: https://codereview.chromium.org/2736783002
Cr-Commit-Position: refs/heads/master@{#455109}

Former-commit-id: 7acd424e3b6884424a4ab9df5ca9c8ab0f5a074d